Replication layer for start domain
