# Backend/src/Core/Start/StartReplicationEntity.ts
@@ -1,0 +1,5 @@
+import Modules from './Modules';
+
+export default class StartReplicationEntity {
+    public module: Modules = 'START_SCREEN';
+}
